点击玉猪龙图片触发热点

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 <div id="panorama"></div>
 
 <!-- 博物馆场景中嵌入的玉猪龙 -->
-<div id="museumYuzhulong" class="museum-yuzhulong" style="display: none;" onclick="showYuzhulongImage()">
+<div id="museumYuzhulong" class="museum-yuzhulong" style="display: none;" onclick="showDragonArtifact('yuzhulong')">
     <img src="images/2.museum/玉猪龙.png" alt="玉猪龙">
     <div class="museum-yuzhulong-title">玉猪龙</div>
 </div>
