--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
         <div class="dragon-hotspot" data-part="body" style="position: absolute; top: 43%; left: 7%; width: 100px; height: 100px; cursor: pointer; background: transparent; border: none; display: flex; align-items: center; justify-content: center;"></div>
         
         <!-- 嘴 - 鳄鱼 -->
-        <div class="dragon-hotspot" data-part="mouth" style="position: absolute; top: 13%; left: 85%; width: 100px; height: 100px; cursor: pointer; background: transparent; border: none; display: flex; align-items: center; justify-content: center;"></div>
+        <div class="dragon-hotspot" data-part="mouth" style="position: absolute; top: 20%; left: 7%; width: 100px; height: 100px; cursor: pointer; background: transparent; border: none; display: flex; align-items: center; justify-content: center;"></div>
     </div>
     
 
@@ -765,13 +765,13 @@
                     "pitch": -25,      // 垂直角度
                     "yaw": 20,       // 水平角度
                     "type": "scene", // 点击切换场景
-                    "text": "进入龙国博物馆",
+                    "text": "进入龙档案馆",
                     "sceneId": "museum"
                 }
             ]
         },
         "museum": {
-            "title": "龙博物馆",
+            "title": "龙档案馆",
             "panorama": "images/2.museum/场景背景参考1.png",
             "initialViewParameters": {
                 "pitch": -25,
@@ -805,7 +805,7 @@
                     "pitch": 0,
                     "yaw": 0,
                     "type": "scene",
-                    "text": "返回龙博物馆",
+                    "text": "返回龙档案馆",
                     "sceneId": "museum"
                 }
             ]
